--- a/app/javascript/react/screens/App/Overview/screens/MappingWizard/MappingWizard.scss
+++ b/app/javascript/react/screens/App/Overview/screens/MappingWizard/MappingWizard.scss
@@ -1,2 +1,33 @@
 @import './components/DualPaneMapper/DualPaneMapper.scss';
-@import './components/MappingWizardClustersStep/MappingWizardClustersStep.scss';
+
+.dual-pane-mapper-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+// TreeView container styles
+.treeview-container {
+  margin-top: 20px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.treeview-container--body {
+  border: 2px solid;
+  margin-bottom: 10px;
+  height: 200px;
+  width: 100%;
+  overflow-y: auto;
+}
+
+.treeview__is-empty {
+  text-align: center;
+}
+
+// Override bootstrap-treeview styles
+.treeview span.indent {
+  margin-left: 0;
+}
