Style source cluster select

--- a/app/javascript/react/screens/App/Overview/screens/MappingWizard/MappingWizard.scss
+++ b/app/javascript/react/screens/App/Overview/screens/MappingWizard/MappingWizard.scss
@@ -1,4 +1,5 @@
 @import './components/DualPaneMapper/DualPaneMapper.scss';
+@import './components/MappingWizardDatastoresStep/MappingWizardDatastoresStep.scss';
 
 .dual-pane-mapper-form {
   display: flex;
